<resources>
    <string name="app_name">Confin</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">Endereço de e-mail inválido.</string>
    <string name="error_invalid_password">Senha muito curta</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">Este campo é obrigatório!</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."
    </string>
    <string name="title_activity_cidades">Cidades</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_receitas">Receitas</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_despesas">Despesas</string>
    <string name="title_activity_cadastro_inicial">Cadastrar-se</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Buscar">Buscar</string>
    <string name="tab_text_cadastar">CADASTRAR</string>
    <string name="titulo_despesas">Despesas</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="titulo_receitas">Receitas</string>
    <string name="Botao">SALVAR</string>
    <string name="data">Data</string>
    <string name="titulo_cadastrar">Cadastra-se</string>

    <string name="login">Login</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="email_error_message">Enter valid email</string>
    <string name="password_error_message">Password length must be 8</string>
    <string name="descricao">Descrição</string>
    <string name="Valor">Valor</string>
    <string name="Situacao">Situação</string>
    <string name="titulo_categorias">Categorias</string>
    <string name="title_activity_categorias">Categorias</string>
    <string name="senha">Senha</string>
    <string name="qtde_parcela">Quantidade de parcela(s)</string>
    <string name="condicao_pgto">Condição de pagamento</string>
    <string name="forma_pgto">Forma de pagamento</string>
    <string name="numero_parcelas">Número de parcela(s)</string>
    <string name="cartao_DC">Digite um nome para o cartão</string>
    <string name="data_vencimento">Data de vencimento</string>
    <string name="subcategotia">Subcategoria</string>
    <string name="categoria">Categoria</string>
    <string name="nome">Nome</string>
    <string name="Pegunta_secreta">Pergunta secreta</string>
    <string name="Confirma_senha">Confirmar senha</string>
    <string name="email_alterar">Informe o e-mail que deseja recuperar a senha</string>
</resources>
