<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/telaCadastroInicial"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:background="@color/bg_white"
        app:layout_constraintEnd_toStartOf="@+id/btnCancelarCategorias"
        app:layout_constraintStart_toStartOf="@+id/btnCancelarCategorias">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilNomeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            app:hintTextAppearance="@style/hintText"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="0dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/id_campoNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:drawableLeft="@drawable/ic_action_pessoa"
                android:drawablePadding="10dp"
                android:hint="@string/nome"
                android:inputType="text"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimaryDark" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilDescricaoLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:hintTextAppearance="@style/hintText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilNomeLayout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/id_campoEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:drawableLeft="@drawable/icon_email"
                android:drawablePadding="10dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimaryDark" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilSenhaLayout"
            android:drawableRight="@drawable/icon_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:hintTextAppearance="@style/hintText"
            app:layout_constraintTop_toBottomOf="@+id/tilDescricaoLayout"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorPrimaryDark"
            tools:layout_editor_absoluteX="15dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/id_campoSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:drawableLeft="@drawable/icon_senha"
                android:hint="@string/senha"
                android:inputType="textPassword"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textColor="@color/colorPrimaryDark" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilPerguntaSecretaLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:hintTextAppearance="@style/hintText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilSenhaLayout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/id_campoPergSecreta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:drawableLeft="@drawable/icon_email"
                android:drawablePadding="10dp"
                android:hint="@string/Pegunta_secreta"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimaryDark" />
        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/id_btnCancelar"
            android:layout_width="103dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="Cancelar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/id_btnCadastrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="Cadastrar"
            app:layout_constraintBottom_toTopOf="@+id/id_btnCancelar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilPerguntaSecretaLayout" />
    </android.support.constraint.ConstraintLayout>
</ScrollView>