<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundo"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:background="@color/bg_white"
        app:layout_constraintEnd_toStartOf="@+id/btnCancelarDespesas"
        app:layout_constraintStart_toStartOf="@+id/btnCancelarDespesas">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilDescricaoLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="55dp"
            app:hintTextAppearance="@style/hintText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tietDescricao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:drawableLeft="@drawable/ic_cartao_credito"
                android:drawablePadding="10dp"
                android:hint="@string/cartao_DC"
                android:inputType="text"
                android:textColor="@color/colorPrimaryDark" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilValorLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="36dp"
            app:hintTextAppearance="@style/hintText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilDescricaoLayout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tietValor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_parcela"
                android:drawablePadding="10dp"
                android:hint="@string/data_vencimento"
                android:inputType="date"
                android:textColor="@color/colorPrimaryDark" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilSituacaoLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="68dp"
            app:hintTextAppearance="@style/hintText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilValorLayout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tietSituacao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/icon_situacao"
                android:drawablePadding="10dp"
                android:focusable="false"
                android:hint="@string/Situacao"
                android:inputType="text"
                android:textColor="@color/colorPrimaryDark" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="129dp"
            android:layout_height="112dp"
            android:layout_marginBottom="8dp"
            android:text="Repetir mensal?"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilDescricaoLayout"
            tools:layout_editor_absoluteX="16dp" />

        <Switch
            android:id="@+id/switch3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Switch"
            tools:layout_editor_absoluteX="270dp"
            tools:layout_editor_absoluteY="251dp" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>